--- a/UnifyOS-backend/requirements.txt
+++ b/UnifyOS-backend/requirements.txt
@@ -1,12 +1,8 @@
-fastapi
-uvicorn[standard]>=0.30.0
-sqlalchemy
-psycopg2-binary
-alembic
-pydantic[email]
-pydantic-settings
-python-dotenv
-httpx
-python-multipart
-emails
-email-validator
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+sqlalchemy==2.0.35
+psycopg2-binary==2.9.9
+pydantic[email]==2.9.2
+pydantic-settings==2.5.2
+email-validator==2.2.0
+python-multipart==0.0.9
