--- a/UnifyOS-backend/requirements.txt
+++ b/UnifyOS-backend/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-sqlalchemy==2.0.35
-psycopg2-binary==2.9.9
-pydantic[email]==2.9.2
-pydantic-settings==2.5.2
-email-validator==2.2.0
-python-multipart==0.0.9
+fastapi
+uvicorn[standard]
+sqlalchemy
+psycopg[binary]
+pydantic[email]
+pydantic-settings
+email-validator
+python-multipart
